your commit message

--- a/zigly.html
+++ b/zigly.html
@@ -18,21 +18,62 @@
             <div class="header-left">Vet&Meet</div>
             <div class="search-bar">
                 <input type="text" placeholder="Search..." />
-                <button><img
+                <img
                         src="https://tse4.mm.bing.net/th?id=OIP.rsZB5iKwX6totSXcV94swQHaHN&pid=Api&P=0&h=220"
-                        alt width="25px" height="25px"></button>
+                        alt width="25px" height="25px">
             </div>
         </header>
         <div class="components">
-            <ul><li>dogs</li>
+            <b><ul class="lists"><li>Dogs</li>
+                    <li>Cats</li>
+                    <li>Small pets</li>
+                    <li>Birds</li>
+                    <li>Brand</li>
+                    <li>Vet Care</li>
+                    <li>Our Stores</li>
+                    <li>Blog</li>
+                    <li>Contact Us</li></ul></b>
+        </div>
+        <div class="container">
+            <img
+                src="https://tse4.mm.bing.net/th?id=OIP.yMAe7fSpK-v38yqUKK7lJQHaES&pid=Api&P=0&h=220"
+                alt width="150px" height="150px">
+                <h3>dogs</h3>
+            <img
+                src="https://tse3.mm.bing.net/th?id=OIP.peA5ILCfebCRr2LRch1BoAHaFj&pid=Api&P=0&h=220"
+                alt width="150px" height="150px">
+                <h3>dogs</h3>
+            <img
+                src="https://tse4.mm.bing.net/th?id=OIP.leKIPQCsm5skT6PjXMCWlAHaEo&pid=Api&P=0&h=220"
+                alt width="150px" height="150px">
+                <h3>dogs</h3>
+            <img
+                src="https://tse1.mm.bing.net/th?id=OIP.0Qdy_rg1jGE6u1mU7ZekBwHaEo&pid=Api&P=0&h=220"
+                alt width="150px" height="150px">
+                <h3>dogs</h3>
+            <img
+                src="https://tse1.mm.bing.net/th?id=OIP.4p0Tjqzi3KSoLusfe4b8LQHaE8&pid=Api&P=0&h=220"
+                alt width="150px" height="150px">
+                <h3>dogs</h3>
+            <img
+                src="https://tse3.mm.bing.net/th?id=OIP.C2WZcdhbwvFmb88QlKLPNwHaHa&pid=Api&P=0&h=220"
+                alt width="150px" height="150px">
+                <h3>dogs</h3>
+            <img
+                src="https://tse2.mm.bing.net/th?id=OIP.zXYy-Gk71ZvczVjWYQHKdAHaHa&pid=Api&P=0&h=220"
+                alt width="150px" height="150px">
+                <h3>dogs</h3>
+
+        </div>
+        <div>
+            <ul class="newlist"><li>Dogs</li>
                 <li>Cats</li>
                 <li>Small pets</li>
                 <li>Birds</li>
-                <li>Brand</li>
-                <li>Vet Care</li>
-                <li>Our Stores</li>
-                <li>Blog</li>
-                <li>Contact Us</li></ul>
+                <li>Vet Consultation</li>
+                <li>Blogs</li>
+                <li>Experience centres</li></ul>
         </div>
+
     </body>
 </html>
